feat!: standardize ports to range 8180-8124 for cluster comms and API
